parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMENTARIO
    IGNORE
    MIENTRAS
    NEWLINE
    NUMBER
    QUOT
    REGRESA

Grammar

Rule 0     S' -> posibleID
Rule 1     programa -> PROGRAMA ID SEMICOLON programa2
Rule 2     programa2 -> declaracion programa2
Rule 3     programa2 -> programa3
Rule 4     programa3 -> declaracionFuncion programa3
Rule 5     programa3 -> principal
Rule 6     principal -> PRINCIPAL OPAREN CPAREN OBRACKET estatutos CBRACKET
Rule 7     declaracion -> VAR INT COLON declaracion2
Rule 8     declaracion -> VAR FLOAT COLON declaracion2
Rule 9     declaracion -> VAR CHAR COLON declaracion2
Rule 10    declaracion2 -> SEMICOLON
Rule 11    declaracion2 -> posibleID declaracion3
Rule 12    declaracion3 -> SEMICOLON
Rule 13    declaracion3 -> COMA declaracion2
Rule 14    declaracion3 -> ASSIGN expresion SEMICOLON
Rule 15    declaracion3 -> ASSIGN expresion COMA declaracion2
Rule 16    declaracionFuncion -> FUNCION VOID ID OPAREN declaracionFuncionParametros CPAREN declaracionFuncionVariables OBRACKET estatutos CBRACKET
Rule 17    declaracionFuncion -> FUNCION INT ID OPAREN declaracionFuncionParametros CPAREN declaracionFuncionVariables OBRACKET estatutos CBRACKET
Rule 18    declaracionFuncion -> FUNCION FLOAT ID OPAREN declaracionFuncionParametros CPAREN declaracionFuncionVariables OBRACKET estatutos CBRACKET
Rule 19    declaracionFuncion -> FUNCION CHAR ID OPAREN declaracionFuncionParametros CPAREN declaracionFuncionVariables OBRACKET estatutos CBRACKET
Rule 20    declaracionFuncionParametros -> empty
Rule 21    declaracionFuncionParametros -> INT ID
Rule 22    declaracionFuncionParametros -> FLOAT ID
Rule 23    declaracionFuncionParametros -> CHAR ID
Rule 24    declaracionFuncionParametros -> INT ID declaracionFuncionParametros2
Rule 25    declaracionFuncionParametros -> FLOAT ID declaracionFuncionParametros2
Rule 26    declaracionFuncionParametros -> CHAR ID declaracionFuncionParametros2
Rule 27    declaracionFuncionParametros2 -> COMA INT ID
Rule 28    declaracionFuncionParametros2 -> COMA FLOAT ID
Rule 29    declaracionFuncionParametros2 -> COMA CHAR ID
Rule 30    declaracionFuncionParametros2 -> COMA INT ID declaracionFuncionParametros2
Rule 31    declaracionFuncionParametros2 -> COMA FLOAT ID declaracionFuncionParametros2
Rule 32    declaracionFuncionParametros2 -> COMA CHAR ID declaracionFuncionParametros2
Rule 33    declaracionFuncionVariables -> empty
Rule 34    declaracionFuncionVariables -> declaracion
Rule 35    estatutos -> empty
Rule 36    estatutos -> declaracion estatutos
Rule 37    estatutos -> estatutoRepeticionIncondicional estatutos
Rule 38    estatutos -> lectura estatutos
Rule 39    estatutos -> llamadaFuncion estatutos
Rule 40    estatutos -> asignacion estatutos
Rule 41    estatutos -> escritura estatutos
Rule 42    estatutos -> decision estatutos
Rule 43    escritura -> ESCRIBE OPAREN escritura2 CPAREN SEMICOLON
Rule 44    escritura2 -> empty
Rule 45    escritura2 -> ID escritura3
Rule 46    escritura2 -> STRING escritura3
Rule 47    escritura3 -> empty
Rule 48    escritura3 -> COMA ID escritura3
Rule 49    escritura3 -> COMA STRING escritura3
Rule 50    decision -> SI OPAREN expresion CPAREN ENTONCES OBRACKET estatutos CBRACKET decision2
Rule 51    decision2 -> SINO OBRACKET estatutos CBRACKET
Rule 52    decision2 -> empty
Rule 53    llamadaFuncion -> ID OPAREN primerParametro extraParametros CPAREN SEMICOLON
Rule 54    primerParametro -> expresion
Rule 55    primerParametro -> empty
Rule 56    extraParametros -> COMA expresion extraParametros
Rule 57    extraParametros -> empty
Rule 58    lectura -> LEE OPAREN posibleID lectura2 CPAREN SEMICOLON
Rule 59    lectura2 -> empty
Rule 60    lectura2 -> COMA posibleID lectura2
Rule 61    asignacion -> ID ASSIGN expresion SEMICOLON
Rule 62    expresion -> expresion LOGIC expresion
Rule 63    expresion -> expresion RELOP expresion
Rule 64    expresion -> termino1 OPMATRIZ
Rule 65    expresion -> termino
Rule 66    termino -> termino PLUS termino
Rule 67    termino -> termino MINUS termino
Rule 68    termino -> termino MULTIPLY termino
Rule 69    termino -> termino DIVIDE termino
Rule 70    termino -> termino1 OPMATRIZ
Rule 71    termino -> termino1
Rule 72    termino1 -> posibleID
Rule 73    termino1 -> ENTERO
Rule 74    termino1 -> FLOTANTE
Rule 75    termino1 -> CARACTER
Rule 76    posibleID -> ID np_ID
Rule 77    posibleID -> ID OCORCH expresion CCORCH
Rule 78    posibleID -> ID np_ID OCORCH expresion COMA expresion CCORCH
Rule 79    termino1 -> OPAREN expresion CPAREN
Rule 80    estatutoRepeticionIncondicional -> DESDE ID ASSIGN expresion HASTA expresion HAZ OBRACKET estatutos CBRACKET
Rule 81    np_ID -> <empty>
Rule 82    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 14 15 61 80
CARACTER             : 75
CBRACKET             : 6 16 17 18 19 50 51 80
CCORCH               : 77 78
CHAR                 : 9 19 23 26 29 32
COLON                : 7 8 9
COMA                 : 13 15 27 28 29 30 31 32 48 49 56 60 78
COMENTARIO           : 
CPAREN               : 6 16 17 18 19 43 50 53 58 79
DESDE                : 80
DIVIDE               : 69
ENTERO               : 73
ENTONCES             : 50
ESCRIBE              : 43
FLOAT                : 8 18 22 25 28 31
FLOTANTE             : 74
FUNCION              : 16 17 18 19
HASTA                : 80
HAZ                  : 80
ID                   : 1 16 17 18 19 21 22 23 24 25 26 27 28 29 30 31 32 45 48 53 61 76 77 78 80
IGNORE               : 
INT                  : 7 17 21 24 27 30
LEE                  : 58
LOGIC                : 62
MIENTRAS             : 
MINUS                : 67
MULTIPLY             : 68
NEWLINE              : 
NUMBER               : 
OBRACKET             : 6 16 17 18 19 50 51 80
OCORCH               : 77 78
OPAREN               : 6 16 17 18 19 43 50 53 58 79
OPMATRIZ             : 64 70
PLUS                 : 66
PRINCIPAL            : 6
PROGRAMA             : 1
QUOT                 : 
REGRESA              : 
RELOP                : 63
SEMICOLON            : 1 10 12 14 43 53 58 61
SI                   : 50
SINO                 : 51
STRING               : 46 49
VAR                  : 7 8 9
VOID                 : 16
error                : 

Nonterminals, with rules where they appear

asignacion           : 40
decision             : 42
decision2            : 50
declaracion          : 2 34 36
declaracion2         : 7 8 9 13 15
declaracion3         : 11
declaracionFuncion   : 4
declaracionFuncionParametros : 16 17 18 19
declaracionFuncionParametros2 : 24 25 26 30 31 32
declaracionFuncionVariables : 16 17 18 19
empty                : 20 33 35 44 47 52 55 57 59
escritura            : 41
escritura2           : 43
escritura3           : 45 46 48 49
estatutoRepeticionIncondicional : 37
estatutos            : 6 16 17 18 19 36 37 38 39 40 41 42 50 51 80
expresion            : 14 15 50 54 56 61 62 62 63 63 77 78 78 79 80 80
extraParametros      : 53 56
lectura              : 38
lectura2             : 58 60
llamadaFuncion       : 39
np_ID                : 76 78
posibleID            : 11 58 60 72 0
primerParametro      : 53
principal            : 5
programa             : 
programa2            : 1 2
programa3            : 3 4
termino              : 65 66 66 67 67 68 68 69 69
termino1             : 64 70 71

Parsing method: LALR

state 0

    (0) S' -> . posibleID
    (76) posibleID -> . ID np_ID
    (77) posibleID -> . ID OCORCH expresion CCORCH
    (78) posibleID -> . ID np_ID OCORCH expresion COMA expresion CCORCH

    ID              shift and go to state 2

    posibleID                      shift and go to state 1

state 1

    (0) S' -> posibleID .



state 2

    (76) posibleID -> ID . np_ID
    (77) posibleID -> ID . OCORCH expresion CCORCH
    (78) posibleID -> ID . np_ID OCORCH expresion COMA expresion CCORCH
    (81) np_ID -> .

  ! shift/reduce conflict for OCORCH resolved as shift
    OCORCH          shift and go to state 4
    $end            reduce using rule 81 (np_ID -> .)
    OPMATRIZ        reduce using rule 81 (np_ID -> .)
    PLUS            reduce using rule 81 (np_ID -> .)
    MINUS           reduce using rule 81 (np_ID -> .)
    MULTIPLY        reduce using rule 81 (np_ID -> .)
    DIVIDE          reduce using rule 81 (np_ID -> .)
    CCORCH          reduce using rule 81 (np_ID -> .)
    LOGIC           reduce using rule 81 (np_ID -> .)
    RELOP           reduce using rule 81 (np_ID -> .)
    COMA            reduce using rule 81 (np_ID -> .)
    CPAREN          reduce using rule 81 (np_ID -> .)

  ! OCORCH          [ reduce using rule 81 (np_ID -> .) ]

    np_ID                          shift and go to state 3

state 3

    (76) posibleID -> ID np_ID .
    (78) posibleID -> ID np_ID . OCORCH expresion COMA expresion CCORCH

    $end            reduce using rule 76 (posibleID -> ID np_ID .)
    OPMATRIZ        reduce using rule 76 (posibleID -> ID np_ID .)
    PLUS            reduce using rule 76 (posibleID -> ID np_ID .)
    MINUS           reduce using rule 76 (posibleID -> ID np_ID .)
    MULTIPLY        reduce using rule 76 (posibleID -> ID np_ID .)
    DIVIDE          reduce using rule 76 (posibleID -> ID np_ID .)
    CCORCH          reduce using rule 76 (posibleID -> ID np_ID .)
    LOGIC           reduce using rule 76 (posibleID -> ID np_ID .)
    RELOP           reduce using rule 76 (posibleID -> ID np_ID .)
    COMA            reduce using rule 76 (posibleID -> ID np_ID .)
    CPAREN          reduce using rule 76 (posibleID -> ID np_ID .)
    OCORCH          shift and go to state 5


state 4

    (77) posibleID -> ID OCORCH . expresion CCORCH
    (62) expresion -> . expresion LOGIC expresion
    (63) expresion -> . expresion RELOP expresion
    (64) expresion -> . termino1 OPMATRIZ
    (65) expresion -> . termino
    (72) termino1 -> . posibleID
    (73) termino1 -> . ENTERO
    (74) termino1 -> . FLOTANTE
    (75) termino1 -> . CARACTER
    (79) termino1 -> . OPAREN expresion CPAREN
    (66) termino -> . termino PLUS termino
    (67) termino -> . termino MINUS termino
    (68) termino -> . termino MULTIPLY termino
    (69) termino -> . termino DIVIDE termino
    (70) termino -> . termino1 OPMATRIZ
    (71) termino -> . termino1
    (76) posibleID -> . ID np_ID
    (77) posibleID -> . ID OCORCH expresion CCORCH
    (78) posibleID -> . ID np_ID OCORCH expresion COMA expresion CCORCH

    ENTERO          shift and go to state 10
    FLOTANTE        shift and go to state 11
    CARACTER        shift and go to state 12
    OPAREN          shift and go to state 13
    ID              shift and go to state 2

    expresion                      shift and go to state 6
    termino1                       shift and go to state 7
    termino                        shift and go to state 8
    posibleID                      shift and go to state 9

state 5

    (78) posibleID -> ID np_ID OCORCH . expresion COMA expresion CCORCH
    (62) expresion -> . expresion LOGIC expresion
    (63) expresion -> . expresion RELOP expresion
    (64) expresion -> . termino1 OPMATRIZ
    (65) expresion -> . termino
    (72) termino1 -> . posibleID
    (73) termino1 -> . ENTERO
    (74) termino1 -> . FLOTANTE
    (75) termino1 -> . CARACTER
    (79) termino1 -> . OPAREN expresion CPAREN
    (66) termino -> . termino PLUS termino
    (67) termino -> . termino MINUS termino
    (68) termino -> . termino MULTIPLY termino
    (69) termino -> . termino DIVIDE termino
    (70) termino -> . termino1 OPMATRIZ
    (71) termino -> . termino1
    (76) posibleID -> . ID np_ID
    (77) posibleID -> . ID OCORCH expresion CCORCH
    (78) posibleID -> . ID np_ID OCORCH expresion COMA expresion CCORCH

    ENTERO          shift and go to state 10
    FLOTANTE        shift and go to state 11
    CARACTER        shift and go to state 12
    OPAREN          shift and go to state 13
    ID              shift and go to state 2

    expresion                      shift and go to state 14
    termino1                       shift and go to state 7
    termino                        shift and go to state 8
    posibleID                      shift and go to state 9

state 6

    (77) posibleID -> ID OCORCH expresion . CCORCH
    (62) expresion -> expresion . LOGIC expresion
    (63) expresion -> expresion . RELOP expresion

    CCORCH          shift and go to state 15
    LOGIC           shift and go to state 16
    RELOP           shift and go to state 17


state 7

    (64) expresion -> termino1 . OPMATRIZ
    (70) termino -> termino1 . OPMATRIZ
    (71) termino -> termino1 .

    OPMATRIZ        shift and go to state 18
    PLUS            reduce using rule 71 (termino -> termino1 .)
    MINUS           reduce using rule 71 (termino -> termino1 .)
    MULTIPLY        reduce using rule 71 (termino -> termino1 .)
    DIVIDE          reduce using rule 71 (termino -> termino1 .)
    CCORCH          reduce using rule 71 (termino -> termino1 .)
    LOGIC           reduce using rule 71 (termino -> termino1 .)
    RELOP           reduce using rule 71 (termino -> termino1 .)
    COMA            reduce using rule 71 (termino -> termino1 .)
    CPAREN          reduce using rule 71 (termino -> termino1 .)


state 8

    (65) expresion -> termino .
    (66) termino -> termino . PLUS termino
    (67) termino -> termino . MINUS termino
    (68) termino -> termino . MULTIPLY termino
    (69) termino -> termino . DIVIDE termino

    CCORCH          reduce using rule 65 (expresion -> termino .)
    LOGIC           reduce using rule 65 (expresion -> termino .)
    RELOP           reduce using rule 65 (expresion -> termino .)
    COMA            reduce using rule 65 (expresion -> termino .)
    CPAREN          reduce using rule 65 (expresion -> termino .)
    PLUS            shift and go to state 19
    MINUS           shift and go to state 20
    MULTIPLY        shift and go to state 21
    DIVIDE          shift and go to state 22


state 9

    (72) termino1 -> posibleID .

    OPMATRIZ        reduce using rule 72 (termino1 -> posibleID .)
    PLUS            reduce using rule 72 (termino1 -> posibleID .)
    MINUS           reduce using rule 72 (termino1 -> posibleID .)
    MULTIPLY        reduce using rule 72 (termino1 -> posibleID .)
    DIVIDE          reduce using rule 72 (termino1 -> posibleID .)
    CCORCH          reduce using rule 72 (termino1 -> posibleID .)
    LOGIC           reduce using rule 72 (termino1 -> posibleID .)
    RELOP           reduce using rule 72 (termino1 -> posibleID .)
    COMA            reduce using rule 72 (termino1 -> posibleID .)
    CPAREN          reduce using rule 72 (termino1 -> posibleID .)


state 10

    (73) termino1 -> ENTERO .

    OPMATRIZ        reduce using rule 73 (termino1 -> ENTERO .)
    PLUS            reduce using rule 73 (termino1 -> ENTERO .)
    MINUS           reduce using rule 73 (termino1 -> ENTERO .)
    MULTIPLY        reduce using rule 73 (termino1 -> ENTERO .)
    DIVIDE          reduce using rule 73 (termino1 -> ENTERO .)
    CCORCH          reduce using rule 73 (termino1 -> ENTERO .)
    LOGIC           reduce using rule 73 (termino1 -> ENTERO .)
    RELOP           reduce using rule 73 (termino1 -> ENTERO .)
    COMA            reduce using rule 73 (termino1 -> ENTERO .)
    CPAREN          reduce using rule 73 (termino1 -> ENTERO .)


state 11

    (74) termino1 -> FLOTANTE .

    OPMATRIZ        reduce using rule 74 (termino1 -> FLOTANTE .)
    PLUS            reduce using rule 74 (termino1 -> FLOTANTE .)
    MINUS           reduce using rule 74 (termino1 -> FLOTANTE .)
    MULTIPLY        reduce using rule 74 (termino1 -> FLOTANTE .)
    DIVIDE          reduce using rule 74 (termino1 -> FLOTANTE .)
    CCORCH          reduce using rule 74 (termino1 -> FLOTANTE .)
    LOGIC           reduce using rule 74 (termino1 -> FLOTANTE .)
    RELOP           reduce using rule 74 (termino1 -> FLOTANTE .)
    COMA            reduce using rule 74 (termino1 -> FLOTANTE .)
    CPAREN          reduce using rule 74 (termino1 -> FLOTANTE .)


state 12

    (75) termino1 -> CARACTER .

    OPMATRIZ        reduce using rule 75 (termino1 -> CARACTER .)
    PLUS            reduce using rule 75 (termino1 -> CARACTER .)
    MINUS           reduce using rule 75 (termino1 -> CARACTER .)
    MULTIPLY        reduce using rule 75 (termino1 -> CARACTER .)
    DIVIDE          reduce using rule 75 (termino1 -> CARACTER .)
    CCORCH          reduce using rule 75 (termino1 -> CARACTER .)
    LOGIC           reduce using rule 75 (termino1 -> CARACTER .)
    RELOP           reduce using rule 75 (termino1 -> CARACTER .)
    COMA            reduce using rule 75 (termino1 -> CARACTER .)
    CPAREN          reduce using rule 75 (termino1 -> CARACTER .)


state 13

    (79) termino1 -> OPAREN . expresion CPAREN
    (62) expresion -> . expresion LOGIC expresion
    (63) expresion -> . expresion RELOP expresion
    (64) expresion -> . termino1 OPMATRIZ
    (65) expresion -> . termino
    (72) termino1 -> . posibleID
    (73) termino1 -> . ENTERO
    (74) termino1 -> . FLOTANTE
    (75) termino1 -> . CARACTER
    (79) termino1 -> . OPAREN expresion CPAREN
    (66) termino -> . termino PLUS termino
    (67) termino -> . termino MINUS termino
    (68) termino -> . termino MULTIPLY termino
    (69) termino -> . termino DIVIDE termino
    (70) termino -> . termino1 OPMATRIZ
    (71) termino -> . termino1
    (76) posibleID -> . ID np_ID
    (77) posibleID -> . ID OCORCH expresion CCORCH
    (78) posibleID -> . ID np_ID OCORCH expresion COMA expresion CCORCH

    ENTERO          shift and go to state 10
    FLOTANTE        shift and go to state 11
    CARACTER        shift and go to state 12
    OPAREN          shift and go to state 13
    ID              shift and go to state 2

    expresion                      shift and go to state 23
    termino1                       shift and go to state 7
    termino                        shift and go to state 8
    posibleID                      shift and go to state 9

state 14

    (78) posibleID -> ID np_ID OCORCH expresion . COMA expresion CCORCH
    (62) expresion -> expresion . LOGIC expresion
    (63) expresion -> expresion . RELOP expresion

    COMA            shift and go to state 24
    LOGIC           shift and go to state 16
    RELOP           shift and go to state 17


state 15

    (77) posibleID -> ID OCORCH expresion CCORCH .

    $end            reduce using rule 77 (posibleID -> ID OCORCH expresion CCORCH .)
    OPMATRIZ        reduce using rule 77 (posibleID -> ID OCORCH expresion CCORCH .)
    PLUS            reduce using rule 77 (posibleID -> ID OCORCH expresion CCORCH .)
    MINUS           reduce using rule 77 (posibleID -> ID OCORCH expresion CCORCH .)
    MULTIPLY        reduce using rule 77 (posibleID -> ID OCORCH expresion CCORCH .)
    DIVIDE          reduce using rule 77 (posibleID -> ID OCORCH expresion CCORCH .)
    CCORCH          reduce using rule 77 (posibleID -> ID OCORCH expresion CCORCH .)
    LOGIC           reduce using rule 77 (posibleID -> ID OCORCH expresion CCORCH .)
    RELOP           reduce using rule 77 (posibleID -> ID OCORCH expresion CCORCH .)
    COMA            reduce using rule 77 (posibleID -> ID OCORCH expresion CCORCH .)
    CPAREN          reduce using rule 77 (posibleID -> ID OCORCH expresion CCORCH .)


state 16

    (62) expresion -> expresion LOGIC . expresion
    (62) expresion -> . expresion LOGIC expresion
    (63) expresion -> . expresion RELOP expresion
    (64) expresion -> . termino1 OPMATRIZ
    (65) expresion -> . termino
    (72) termino1 -> . posibleID
    (73) termino1 -> . ENTERO
    (74) termino1 -> . FLOTANTE
    (75) termino1 -> . CARACTER
    (79) termino1 -> . OPAREN expresion CPAREN
    (66) termino -> . termino PLUS termino
    (67) termino -> . termino MINUS termino
    (68) termino -> . termino MULTIPLY termino
    (69) termino -> . termino DIVIDE termino
    (70) termino -> . termino1 OPMATRIZ
    (71) termino -> . termino1
    (76) posibleID -> . ID np_ID
    (77) posibleID -> . ID OCORCH expresion CCORCH
    (78) posibleID -> . ID np_ID OCORCH expresion COMA expresion CCORCH

    ENTERO          shift and go to state 10
    FLOTANTE        shift and go to state 11
    CARACTER        shift and go to state 12
    OPAREN          shift and go to state 13
    ID              shift and go to state 2

    expresion                      shift and go to state 25
    termino1                       shift and go to state 7
    termino                        shift and go to state 8
    posibleID                      shift and go to state 9

state 17

    (63) expresion -> expresion RELOP . expresion
    (62) expresion -> . expresion LOGIC expresion
    (63) expresion -> . expresion RELOP expresion
    (64) expresion -> . termino1 OPMATRIZ
    (65) expresion -> . termino
    (72) termino1 -> . posibleID
    (73) termino1 -> . ENTERO
    (74) termino1 -> . FLOTANTE
    (75) termino1 -> . CARACTER
    (79) termino1 -> . OPAREN expresion CPAREN
    (66) termino -> . termino PLUS termino
    (67) termino -> . termino MINUS termino
    (68) termino -> . termino MULTIPLY termino
    (69) termino -> . termino DIVIDE termino
    (70) termino -> . termino1 OPMATRIZ
    (71) termino -> . termino1
    (76) posibleID -> . ID np_ID
    (77) posibleID -> . ID OCORCH expresion CCORCH
    (78) posibleID -> . ID np_ID OCORCH expresion COMA expresion CCORCH

    ENTERO          shift and go to state 10
    FLOTANTE        shift and go to state 11
    CARACTER        shift and go to state 12
    OPAREN          shift and go to state 13
    ID              shift and go to state 2

    expresion                      shift and go to state 26
    termino1                       shift and go to state 7
    termino                        shift and go to state 8
    posibleID                      shift and go to state 9

state 18

    (64) expresion -> termino1 OPMATRIZ .
    (70) termino -> termino1 OPMATRIZ .

  ! reduce/reduce conflict for CCORCH resolved using rule 64 (expresion -> termino1 OPMATRIZ .)
  ! reduce/reduce conflict for LOGIC resolved using rule 64 (expresion -> termino1 OPMATRIZ .)
  ! reduce/reduce conflict for RELOP resolved using rule 64 (expresion -> termino1 OPMATRIZ .)
  ! reduce/reduce conflict for COMA resolved using rule 64 (expresion -> termino1 OPMATRIZ .)
  ! reduce/reduce conflict for CPAREN resolved using rule 64 (expresion -> termino1 OPMATRIZ .)
    CCORCH          reduce using rule 64 (expresion -> termino1 OPMATRIZ .)
    LOGIC           reduce using rule 64 (expresion -> termino1 OPMATRIZ .)
    RELOP           reduce using rule 64 (expresion -> termino1 OPMATRIZ .)
    COMA            reduce using rule 64 (expresion -> termino1 OPMATRIZ .)
    CPAREN          reduce using rule 64 (expresion -> termino1 OPMATRIZ .)
    PLUS            reduce using rule 70 (termino -> termino1 OPMATRIZ .)
    MINUS           reduce using rule 70 (termino -> termino1 OPMATRIZ .)
    MULTIPLY        reduce using rule 70 (termino -> termino1 OPMATRIZ .)
    DIVIDE          reduce using rule 70 (termino -> termino1 OPMATRIZ .)

  ! CCORCH          [ reduce using rule 70 (termino -> termino1 OPMATRIZ .) ]
  ! LOGIC           [ reduce using rule 70 (termino -> termino1 OPMATRIZ .) ]
  ! RELOP           [ reduce using rule 70 (termino -> termino1 OPMATRIZ .) ]
  ! COMA            [ reduce using rule 70 (termino -> termino1 OPMATRIZ .) ]
  ! CPAREN          [ reduce using rule 70 (termino -> termino1 OPMATRIZ .) ]


state 19

    (66) termino -> termino PLUS . termino
    (66) termino -> . termino PLUS termino
    (67) termino -> . termino MINUS termino
    (68) termino -> . termino MULTIPLY termino
    (69) termino -> . termino DIVIDE termino
    (70) termino -> . termino1 OPMATRIZ
    (71) termino -> . termino1
    (72) termino1 -> . posibleID
    (73) termino1 -> . ENTERO
    (74) termino1 -> . FLOTANTE
    (75) termino1 -> . CARACTER
    (79) termino1 -> . OPAREN expresion CPAREN
    (76) posibleID -> . ID np_ID
    (77) posibleID -> . ID OCORCH expresion CCORCH
    (78) posibleID -> . ID np_ID OCORCH expresion COMA expresion CCORCH

    ENTERO          shift and go to state 10
    FLOTANTE        shift and go to state 11
    CARACTER        shift and go to state 12
    OPAREN          shift and go to state 13
    ID              shift and go to state 2

    termino                        shift and go to state 27
    termino1                       shift and go to state 28
    posibleID                      shift and go to state 9

state 20

    (67) termino -> termino MINUS . termino
    (66) termino -> . termino PLUS termino
    (67) termino -> . termino MINUS termino
    (68) termino -> . termino MULTIPLY termino
    (69) termino -> . termino DIVIDE termino
    (70) termino -> . termino1 OPMATRIZ
    (71) termino -> . termino1
    (72) termino1 -> . posibleID
    (73) termino1 -> . ENTERO
    (74) termino1 -> . FLOTANTE
    (75) termino1 -> . CARACTER
    (79) termino1 -> . OPAREN expresion CPAREN
    (76) posibleID -> . ID np_ID
    (77) posibleID -> . ID OCORCH expresion CCORCH
    (78) posibleID -> . ID np_ID OCORCH expresion COMA expresion CCORCH

    ENTERO          shift and go to state 10
    FLOTANTE        shift and go to state 11
    CARACTER        shift and go to state 12
    OPAREN          shift and go to state 13
    ID              shift and go to state 2

    termino                        shift and go to state 29
    termino1                       shift and go to state 28
    posibleID                      shift and go to state 9

state 21

    (68) termino -> termino MULTIPLY . termino
    (66) termino -> . termino PLUS termino
    (67) termino -> . termino MINUS termino
    (68) termino -> . termino MULTIPLY termino
    (69) termino -> . termino DIVIDE termino
    (70) termino -> . termino1 OPMATRIZ
    (71) termino -> . termino1
    (72) termino1 -> . posibleID
    (73) termino1 -> . ENTERO
    (74) termino1 -> . FLOTANTE
    (75) termino1 -> . CARACTER
    (79) termino1 -> . OPAREN expresion CPAREN
    (76) posibleID -> . ID np_ID
    (77) posibleID -> . ID OCORCH expresion CCORCH
    (78) posibleID -> . ID np_ID OCORCH expresion COMA expresion CCORCH

    ENTERO          shift and go to state 10
    FLOTANTE        shift and go to state 11
    CARACTER        shift and go to state 12
    OPAREN          shift and go to state 13
    ID              shift and go to state 2

    termino                        shift and go to state 30
    termino1                       shift and go to state 28
    posibleID                      shift and go to state 9

state 22

    (69) termino -> termino DIVIDE . termino
    (66) termino -> . termino PLUS termino
    (67) termino -> . termino MINUS termino
    (68) termino -> . termino MULTIPLY termino
    (69) termino -> . termino DIVIDE termino
    (70) termino -> . termino1 OPMATRIZ
    (71) termino -> . termino1
    (72) termino1 -> . posibleID
    (73) termino1 -> . ENTERO
    (74) termino1 -> . FLOTANTE
    (75) termino1 -> . CARACTER
    (79) termino1 -> . OPAREN expresion CPAREN
    (76) posibleID -> . ID np_ID
    (77) posibleID -> . ID OCORCH expresion CCORCH
    (78) posibleID -> . ID np_ID OCORCH expresion COMA expresion CCORCH

    ENTERO          shift and go to state 10
    FLOTANTE        shift and go to state 11
    CARACTER        shift and go to state 12
    OPAREN          shift and go to state 13
    ID              shift and go to state 2

    termino                        shift and go to state 31
    termino1                       shift and go to state 28
    posibleID                      shift and go to state 9

state 23

    (79) termino1 -> OPAREN expresion . CPAREN
    (62) expresion -> expresion . LOGIC expresion
    (63) expresion -> expresion . RELOP expresion

    CPAREN          shift and go to state 32
    LOGIC           shift and go to state 16
    RELOP           shift and go to state 17


state 24

    (78) posibleID -> ID np_ID OCORCH expresion COMA . expresion CCORCH
    (62) expresion -> . expresion LOGIC expresion
    (63) expresion -> . expresion RELOP expresion
    (64) expresion -> . termino1 OPMATRIZ
    (65) expresion -> . termino
    (72) termino1 -> . posibleID
    (73) termino1 -> . ENTERO
    (74) termino1 -> . FLOTANTE
    (75) termino1 -> . CARACTER
    (79) termino1 -> . OPAREN expresion CPAREN
    (66) termino -> . termino PLUS termino
    (67) termino -> . termino MINUS termino
    (68) termino -> . termino MULTIPLY termino
    (69) termino -> . termino DIVIDE termino
    (70) termino -> . termino1 OPMATRIZ
    (71) termino -> . termino1
    (76) posibleID -> . ID np_ID
    (77) posibleID -> . ID OCORCH expresion CCORCH
    (78) posibleID -> . ID np_ID OCORCH expresion COMA expresion CCORCH

    ENTERO          shift and go to state 10
    FLOTANTE        shift and go to state 11
    CARACTER        shift and go to state 12
    OPAREN          shift and go to state 13
    ID              shift and go to state 2

    expresion                      shift and go to state 33
    termino1                       shift and go to state 7
    termino                        shift and go to state 8
    posibleID                      shift and go to state 9

state 25

    (62) expresion -> expresion LOGIC expresion .
    (62) expresion -> expresion . LOGIC expresion
    (63) expresion -> expresion . RELOP expresion

  ! shift/reduce conflict for LOGIC resolved as shift
  ! shift/reduce conflict for RELOP resolved as shift
    CCORCH          reduce using rule 62 (expresion -> expresion LOGIC expresion .)
    COMA            reduce using rule 62 (expresion -> expresion LOGIC expresion .)
    CPAREN          reduce using rule 62 (expresion -> expresion LOGIC expresion .)
    LOGIC           shift and go to state 16
    RELOP           shift and go to state 17

  ! LOGIC           [ reduce using rule 62 (expresion -> expresion LOGIC expresion .) ]
  ! RELOP           [ reduce using rule 62 (expresion -> expresion LOGIC expresion .) ]


state 26

    (63) expresion -> expresion RELOP expresion .
    (62) expresion -> expresion . LOGIC expresion
    (63) expresion -> expresion . RELOP expresion

  ! shift/reduce conflict for LOGIC resolved as shift
  ! shift/reduce conflict for RELOP resolved as shift
    CCORCH          reduce using rule 63 (expresion -> expresion RELOP expresion .)
    COMA            reduce using rule 63 (expresion -> expresion RELOP expresion .)
    CPAREN          reduce using rule 63 (expresion -> expresion RELOP expresion .)
    LOGIC           shift and go to state 16
    RELOP           shift and go to state 17

  ! LOGIC           [ reduce using rule 63 (expresion -> expresion RELOP expresion .) ]
  ! RELOP           [ reduce using rule 63 (expresion -> expresion RELOP expresion .) ]


state 27

    (66) termino -> termino PLUS termino .
    (66) termino -> termino . PLUS termino
    (67) termino -> termino . MINUS termino
    (68) termino -> termino . MULTIPLY termino
    (69) termino -> termino . DIVIDE termino

    PLUS            reduce using rule 66 (termino -> termino PLUS termino .)
    MINUS           reduce using rule 66 (termino -> termino PLUS termino .)
    CCORCH          reduce using rule 66 (termino -> termino PLUS termino .)
    LOGIC           reduce using rule 66 (termino -> termino PLUS termino .)
    RELOP           reduce using rule 66 (termino -> termino PLUS termino .)
    COMA            reduce using rule 66 (termino -> termino PLUS termino .)
    CPAREN          reduce using rule 66 (termino -> termino PLUS termino .)
    MULTIPLY        shift and go to state 21
    DIVIDE          shift and go to state 22

  ! MULTIPLY        [ reduce using rule 66 (termino -> termino PLUS termino .) ]
  ! DIVIDE          [ reduce using rule 66 (termino -> termino PLUS termino .) ]
  ! PLUS            [ shift and go to state 19 ]
  ! MINUS           [ shift and go to state 20 ]


state 28

    (70) termino -> termino1 . OPMATRIZ
    (71) termino -> termino1 .
